--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~8.1.3",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^8.2.0",
+    "@ngrx/router-store": "^8.2.0",
     "@ngrx/store": "^8.2.0",
+    "@ngrx/store-devtools": "^8.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
